# ESP32LORA

./: .gitignore  CMakeLists.txt  README.md  project-tree.txt  sdkconfig
components/BTClassic/: BTClassic.cpp  BTClassic.h  CMakeLists.txt
components/RFM95Lora/: CMakeLists.txt  RFM95Lora.cpp  RFM95Lora.h
components/Relay/: CMakeLists.txt  Relay.cpp  Relay.h
components/SHT3X/: CMakeLists.txt  SHT3X.cpp  SHT3X.h
components/Voltage/: CMakeLists.txt  Voltage.cpp  Voltage.h
main/: CMakeLists.txt  CommandProcessor.cpp  CommandProcessor.h  Config.h  main.cpp
